@@ -12,6 +12,8 @@ What's New in Python 3.0.2?
 Core and Builtins
 -----------------
 
+- Issue #5994: the marshal module now has docstrings.
+
 - Issue #5981: Fix two minor inf/nan issues in float.fromhex: (1) inf
   and nan strings with trailing whitespace were incorrectly rejected
   and (2) the interpretation of fromhex('-nan') didn't match that of
